--- a/project/example/index.html
+++ b/project/example/index.html
@@ -810,8 +810,14 @@
 
 
   
+    
+  
 
 
+
+<a class="btn btn-outline-primary btn-page-header" href="/files/CS771A_report.pdf" target="_blank" rel="noopener">
+  PDF
+</a>
 
 
 
